Updated posts to publish

--- a/content/post/M67.md
+++ b/content/post/M67.md
@@ -4,6 +4,7 @@ date: 2025-03-18T17:51:04+11:00
 tags: []
 featured_image: "/images/grid.png"
 description: ""
+draft : false
 ---
 Ensemble asteroseismology has revolutionized our ability to empirically link observed seismic properties to fundamental stellar parameters. Star clusters, with their uniform metallicity, distance, and age, provide an ideal environment for refining these relations.  
 
