--- a/content/post/M67.md
+++ b/content/post/M67.md
@@ -24,7 +24,7 @@ the correction given by the power-law fit derived in this work.</figcaption>
 </figure>
 
 
-A key focus of our work is the calibration of **seismic scaling relations** for mass and radius. We quantify the systematic errors introduced when surface term corrections are omitted from state-of-the-art stellar models, demonstrating how significantly the scaling relations are affected by missing corrections. Our mass estimates indicate that the **Reimers mass loss parameter cannot exceed η ≈ 0.23** at the 2σ level.  
+A key focus of our work is the calibration of **seismic scaling relations** for mass and radius. We quantify the systematic errors introduced when surface term corrections are omitted from state-of-the-art stellar models, demonstrating how significantly the scaling relations are affected by missing corrections. Our mass estimates indicate little to no-mass-loss during the RGB.
 
 Using isochrone models tailored to M67, we compare individual mode frequencies with theoretical predictions. While seismic masses for subgiants and red giant branch stars align well with isochrone expectations, we find an inconsistency with one component of an **eclipsing binary near the TAMS**. A traditional **χ²-based seismic fit** provides an estimated cluster age of **3.95 ± 0.35 Gyr**.  
 
