just copied from public to docs again

--- a/content/post/M67.md
+++ b/content/post/M67.md
@@ -26,11 +26,13 @@ the correction given by the power-law fit derived in this work.</figcaption>
 
 A key focus of our work was the calibration of **seismic scaling relations** for mass and radius. We quantified the systematic errors introduced when surface term corrections are omitted from state-of-the-art stellar models, demonstrating how significantly the scaling relations are affected by missing corrections. Our mass estimates indicated minimal mass-loss during the RGB.
 
-Using isochrone models tailored to M67, we compared individual mode frequencies with theoretical predictions. We found that seismic masses for subgiants and red giant branch stars aligned well with isochrone expectations A traditional **χ²-based seismic fit** provides an estimated cluster age of **3.95 ± 0.35 Gyr**.  
+Using isochrone models tailored to M67, we compared individual mode frequencies with theoretical predictions. We found that seismic masses for subgiants and red giant branch stars aligned well with isochrone expectation.
 
 <figure>
   <img src="/images/grid.png" alt="Model grid">
   <figcaption style="font-size: 0.8em; color: gray;">Observed stars (white circles) in the GAIA Colour-Absolute magnitude diagram, and their best fitted seismic models (red circles). The grid of over 2,000,000 individual models shows as a continuous grey band in the diagram. The small panels show the χ² distribution of models with Δν near each star's observed value. </figcaption>
 </figure>
+
+A traditional **χ²-based seismic fit** provides an estimated cluster age of **3.95 ± 0.35 Gyr**.  
 
 📖 **Read the full study [here](https://ui.adsabs.harvard.edu/link_gateway/2025MNRAS.tmp..347R/doi:10.1093/mnras/staf353):**  
