resized one figure

--- a/content/post/M67.md
+++ b/content/post/M67.md
@@ -28,8 +28,8 @@ A key focus of our work was the calibration of **seismic scaling relations** for
 
 Using isochrone models tailored to M67, we compared individual mode frequencies with theoretical predictions. We found that seismic masses for subgiants and red giant branch stars aligned well with isochrone expectation.
 
-<figure>
-  <img src="/images/grid.png" alt="Model grid">
+<figure style="text-align: center; margin: 2rem 0;">
+  <img src="/images/grid.png" alt="Model grid" style="width: 60%; max-width: 100%; height: auto; border-radius: 6px;">
   <figcaption style="font-size: 0.8em; color: gray;">Observed stars (white circles) in the GAIA Colour-Absolute magnitude diagram, and their best fitted seismic models (red circles). The grid of over 2,000,000 individual models shows as a continuous grey band in the diagram. The small panels show the χ² distribution of models with Δν near each star's observed value. </figcaption>
 </figure>
 
